# neon-codexbar

./: README.md  pyproject.toml
docs/: DAEMON_CONTRACT.md  GPT_PHASE_0_2_PEER_REVIEW.md  PHASE_0_1_RESULTS.md  PROVIDER_SETUP.md
neon_codexbar/: __init__.py  __main__.py
packaging/: install.sh  neon-codexbar.service  uninstall.sh
plans/: claude-neon-codexbar-plan.md  claude-phase0-1-fixes.md  codexbar-config-bootstrap-plan.md  gpt-neon-codexbar-plan.md  install-launch-fix-plan.md  multi-provider-qa-plan.md  next-steps-user-config.md  phase-0-1-dispatch.md  phase-2-daemon.md  phase-3-plasmoid.md  phase-4-cleanup-process.md  phase-4-ui-ux-cleanup-plan.md  popup-details-qa-plan.md  uninstall-widget-cleanup-plan.md
plasmoid/: metadata.json
plasmoid/contents/config/: ConfigGeneral.qml  config.qml  main.xml
plasmoid/contents/ui/: CompactRepresentation.qml  CreditMeter.qml  FullRepresentation.qml  ProviderCard.qml  QuotaWindowBar.qml  SnapshotStore.qml  StatusBanner.qml  main.qml
src/neon_codexbar/: __init__.py  __main__.py  cli.py  config.py  daemon.py  diagnostics.py  models.py
src/neon_codexbar/adapter/: __init__.py  discovery.py  normalizer.py  runner.py  source_policy.py
src/neon_codexbar/ipc/: __init__.py  snapshot_writer.py
tests/fixtures/codexbar/: claude_cli_success.json  codex_cli_success.json  config_dump.json  openrouter_api_success.json  representative_error.json  (+1 more)
tests/unit/: test_cli.py  test_config.py  test_daemon.py  test_diagnostics.py  test_discovery.py  test_normalizer.py  test_runner.py  test_snapshot_writer.py  test_source_policy.py
(+2 files in other folders)
