[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "neon-codexbar"
version = "0.1.0"
description = "KDE/Plasma frontend adapter for CodexBar provider usage data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Jeremy Windsor" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.scripts]
neon-codexbar = "neon_codexbar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neon_codexbar"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["ANN401"]
